--- a/index.html
+++ b/index.html
@@ -1,155 +1,192 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="utf-8">
-	<title>Stargazing</title>
-</head>
-<body>
+    <head>
+        <meta charset="utf-8">
+        <title>The Space Station</title>
+        <link rel="stylesheet" href="CSS/shared.css">
+        <link rel="stylesheet" href="CSS/animation.css">
+    </head>
+    <body>
+        <!--Nav-->
+        <div class="wrap">
+            <div class ="menu-container">
+                <ul class="menu">
+                    <a href="#home"><li>Home</li></a>
+                    <a href="#gallery"><li>Gallery</li></a>
+                    <a href="#contact"><li>Reservation</li></a>
+                </ul>            
+            </div>
+        </div>
+        <!--End Nav-->
 
-	<!--Nav-->
-	<header>
-		<h1>Stargazing for Everyone</h1>
-		<p>Exploring the <em>beauty and wonders</em> of our night sky</p>
-	</header>
-	<div id="Nav">
-		<div>
-			<ul>
-				<a href="#home" id="link"><li>Home</li></a>
-				<a href="#gallery" id="link"><li>Gallery</li></a>
-				<a href="#booking" id="link"><li>Bookings</li></a>
-		</div>
-	</div>
-	<!--End Nav-->
-	
-	<!--Home-->
-	<div id="home">
-		<h1> Home </h1>
-	</div>
-	<!--End Home-->
-	
-	<!--Gallery-->
-	<div id="gallery">
-		<h1>The wonderful Constellations</h1>
-		<p>Just some of the beautiful sights and constelaationa we'll see on stagazing journey</p>
-			<!--Photo-Container 1-->
-			<div>
-				<div>
-					<img src="C:/Users/swell/Documents/Pitman/Project/Images/Thumbnail_1.png" alt="Andromeda">
-					<h2>Click to Enlarge</h2>
-					<p>Book a Show today</p>
-				</div>
-			</div>
-			<!--End Photo-Container 1-->
-			
-			<!--Photo-Container 2-->
-			<div>
-				<div>
-					<img src="C:/Users/swell/Documents/Pitman/Project/Images/Thumbnail_2.png" alt="Aries">
-					<h2>Click to Enlarge</h2>
-					<p>Book a Show today</p>
-				</div>
-			</div>
-			<!--End Photo-Container 2-->
-			<!--Photo-Container 3-->
-			<div>
-				<div>
-					<img src="C:/Users/swell/Documents/Pitman/Project/Images/Thumbnail_3.png" alt="Auriga">
-					<h2>Click to Enlarge</h2>
-					<p>Book a Show today</p>
-				</div>
-			</div>
-			<!--End Photo-Container 3-->
-			<!--Photo-Container 4-->
-			<div>
-				<div>
-					<img src="C:/Users/swell/Documents/Pitman/Project/Images/Thumbnail_4.png" alt="Bootes">	
-					<h2>Click to Enlarge</h2>
-					<p>Book a Show today</p>
-				</div>
-			</div>
-			<!--End Photo-Container 4-->
-			
-			<!--Photo-Container 5-->
-			<div>
-				<div>
-					<img src="C:/Users/swell/Documents/Pitman/Project/Images/Thumbnail_5.png" alt="Caelum">
-					<h2>Click to Enlarge</h2>
-					<p>Book a Show today</p>
-				</div>
-			</div>
-			<!--End Photo-Container 5-->
-			<!--Photo-Container 6-->
-			<div>
-				<div>
-					<img src="C:/Users/swell/Documents/Pitman/Project/Images/Thumbnail_6.png" alt="Aquila">
-					<h2>Click to Enlarge</h2>
-					<p>Book a Show today</p>
-				</div>
-			</div>
-			<!--End Photo-Container 6-->
-			<!--Photo-Container 7-->
-			<div>
-				<div>
-					<img src="C:/Users/swell/Documents/Pitman/Project/Images/Thumbnail_7.png" alt="Aquerius">
-					<h2>Click to Enlarge</h2>
-					<p>Book a Show today</p>
-				</div>
-			</div>
-			<!--End Photo-Container 7-->
-			<!--Photo-Container 8-->
-			<div>
-				<div>
-					<img src="C:/Users/swell/Documents/Pitman/Project/Images/Thumbnail_8.png" alt="Apus">
-					<h2>Click to Enlarge</h2>
-					<p>Book a Show today</p>
-				</div>
-			</div>
-			<!--End Photo-Container 8-->
-			<!--Photo-Container 9-->
-			<div>
-				<div>
-					<img src="C:/Users/swell/Documents/Pitman/Project/Images/Thumbnail_9.png" alt="Antilia">
-					<h2>Click to Enlarge</h2>
-					<p>Book a Show today</p>
-				</div>
-			</div>
-			<!--End Photo-Container 9-->
-	</div>
-	<!--End Gallery-->
-	
-	<!--RSVP-->
-		<div id="booking">
-			<div>
-				<h1>Bookings</h1>
-			</div>
-			<div>
-				<h2>Party all Night<br>
-					<em>reserve a place today</em>
-				</h2>
-				<p>
-					please provide us with basic contact info
-				</p>
-				<!--form-->
-				<div>
-					<form action="" method="post">
-						<input class= type="text" value="First Name">
-						<input class= type="text" value="Last Name">
-						<input class= type="text" value="Email Address">
-						<input class= type="text" value="Mobile Number">
-						<div class="form-space">
-							<label class="terms">Terms and Conditions</label>
-						</div>
-						<div>
-							<input type="submit" value="Submit">
-						</div>
-				</div>				
-				<!--end form-->
-			</div>
-		</div>
-	<!--End RSVP-->
-	<footer>
-	copywrite C
-	</footer>
-</body>
+        <!--Home-->
+        <div id="home">
+            <div class="container">
+                <div class="text-center">
+                    <span class="head-main"> Space Station</span>
+                </div>
+            </div>
+        </div>        
+        <!--End Home-->
 
-</html>
+        <!--Gallery-->
+        <section id="gallery">
+            <div class="container">
+                <h1>Gallery</h1>
+                <div class="flex-container">
+
+                    <!--PHOTO CONTAINER 1-->
+                    <div class="photo-container">
+                        <div class="photo">
+                            <img src="Images/Thumb/Thumbnail_1.jpg" alt="Constellation">
+                            <div class="photo-overlay">
+                                <h3 class="white-head">Click to enlarge</h3>
+                                <p>We have several space launches departing daily, book your flight today!</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!--END PHOTO CONTAINER 1-->
+
+                    <!--PHOTO CONTAINER 2-->
+                    <div class="photo-container">
+                        <div class="photo">
+                            <img src="Images/Thumb/Thumbnail_2.jpeg" alt="Constellation">
+                                <div class="photo-overlay">
+                                    <h3 class="white-head">Click to enlarge</h3>
+                                    <p>We have several space launces departing daily, book your flight today!</p>
+                                </div>
+                        </div>
+                    </div>
+                    <!--END PHOTO CONTAINER 2-->
+
+                    <!--PHOTO CONTAINER 3-->
+                    <div class="photo-container">
+                        <div class="photo">
+                            <img src="Images/Thumb/Thumbnail_3.jpeg" alt="Constellation">
+                                <div class="photo-overlay">
+                                    <h3 class="white-head">Click to enlarge</h3>
+                                    <p>We have several space launces departing daily, book your flight today!</p>
+                                </div>
+                        </div>
+                    </div>
+                    <!--END PHOTO CONTAINER 3-->
+
+                    <!--PHOTO CONTAINER 4-->
+                    <div class="photo-container">
+                        <div class="photo">
+                            <img src="Images/Thumb/Thumbnail_4.jpeg" alt="Constellation">
+                                <div class="photo-overlay">
+                                    <h3 class="white-head">Click to enlarge</h3>
+                                    <p>We have several space launces departing daily, book your flight today!</p>
+                                </div>
+                        </div>
+                    </div>
+                    <!--END PHOTO CONTAINER 4-->
+
+                    <!--PHOTO CONTAINER 5-->
+                    <div class="photo-container">
+                        <div class="photo">
+                            <img src="Images/Thumb/Thumbnail_5.jpeg" alt="Constellation">
+                                <div class="photo-overlay">
+                                    <h3 class="white-head">Click to enlarge</h3>
+                                    <p>We have several space launces departing daily, book your flight today!</p>
+                                </div>
+                        </div>
+                    </div>
+                    <!--END PHOTO CONTAINER 5-->
+
+                    <!--PHOTO CONTAINER 6-->
+                    <div class="photo-container">
+                        <div class="photo">
+                            <img src="Images/Thumb/Thumbnail_6.jpeg" alt="Constellation">
+                                <div class="photo-overlay">
+                                    <h3 class="white-head">Click to enlarge</h3>
+                                    <p>We have several space launces departing daily, book your flight today!</p>
+                                </div>
+                        </div>
+                    </div>
+                    <!--END PHOTO CONTAINER 6-->
+
+                    <!--PHOTO CONTAINER 7-->
+                    <div class="photo-container">
+                        <div class="photo">
+                            <img src="Images/Thumb/Thumbnail_7.jpeg" alt="Constellation">
+                                <div class="photo-overlay">
+                                    <h3 class="white-head">Click to enlarge</h3>
+                                    <p>We have several space launces departing daily, book your flight today!</p>
+                                </div>
+                        </div>
+                    </div>
+                    <!--END PHOTO CONTAINER 7-->
+
+                    <!--PHOTO CONTAINER 8-->
+                    <div class="photo-container">
+                        <div class="photo">
+                            <img src="Images/Thumb/Thumbnail_8.jpeg" alt="Constellation">
+                                <div class="photo-overlay">
+                                    <h3 class="white-head">Click to enlarge</h3>
+                                    <p>We have several space launces departing daily, book your flight today!</p>
+                                </div>
+                        </div>
+                    </div>
+                    <!--END PHOTO CONTAINER 8-->
+ 
+                    <!--PHOTO CONTAINER 9-->
+                    <div class="photo-container">
+                        <div class="photo">
+                            <img src="Images/Thumb/Thumbnail_9.jpeg" alt="Constellation">
+                                <div class="photo-overlay">
+                                    <h3 class="white-head">Click to enlarge</h3>
+                                    <p>We have several space launces departing daily, book your flight today!</p>
+                                </div>
+                        </div>
+                    </div>
+                    <!--END PHOTO CONTAINER 9-->
+               
+                </div>
+            </div>           
+        </section >
+        <!--End Gallery-->   
+
+        <!--contact-->
+        <section id="contact">
+            <div class="container">
+                <div class="heading-padding">
+                    <h1 class="heading-padding">Reserveration</h1>
+                    <div class="reservation">
+                        <h2><span>Your adventure is just around the corner</span>
+                            <br>Reserve your flight today!
+                        </h2>
+                        <p class="rsvp-text">
+                            Please provide us with you basic contact information.
+                        </p>
+                            <div class="form-rsvp">
+                                <form action="" method="post">
+                                    <input class="rsvp" type="text" value="" placeholder="First Name">
+                                    <input class="rsvp" type="text" value="" placeholder="Last Name">
+                                    <input class="rsvp" type="text" value="" placeholder="Email Address">
+                                    <input class="rsvp" type="text" value="" placeholder="Phone Number">
+                                    <div class="form-spacer">
+                                        <label class="terms">Terms and Conditions</label>
+                                    </div>
+                                    <div class="submit">
+                                        <input type="submit" value="Submit">
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+        </section>
+        <!--End contact-->
+
+        <!--Footer-->
+        <div id="footer">
+            <p>www.thespaceship.com &nbsp;/&nbsp; &copy;2020</p> 
+            <!--need &nbsp for a space as spacebar won't do it-->
+        </div>
+        <!--End Footer-->
+        
+    </body>
+</html> 
