Changes to code test and added Video

--- a/Challenge_mod5_1-11.html
+++ b/Challenge_mod5_1-11.html
@@ -121,10 +121,49 @@
     </div>
 
     <div class="container">
-      <div class="Chall5_8">
-        <h1>Challenge 5-8</h1>
+      <h1>Challenge 5-8</h1>
+      <p>image overlay fade</p>
+        <div class="container_overlay">
+          <img src="Images/Thumb/Thumbnail_2.jpeg" alt="Constellation">
+            <div class="middle_text">
+              <div class="overlay_text">Sup Sup</div>
+            </div>
+        </div>
+    </div>
+
+      <div class="container">
+        <h1>Challenge 5-8a</h1>
         <p>image overlay fade</p>
-        <img src="Images/Thumb/Thumbnail_2.jpeg" alt="Constellation">
+          <div class="container_overlay2">
+            <img src="Images/Thumb/Thumbnail_2.jpeg" alt="Constellation">
+              <div class="middle_text2">
+                <div class="overlay_text2">Ahoy Ahoy</div>
+              </div>
+          </div>
+      </div>
+
+    <div class="container">
+      <div> 
+          <h1>Challenge 5-9 video</h1>
+          <p>a video that autoplays on mute on a loop</p>
+            <div>
+              <video width="320" height="240" controls muted autoplay loop>
+                <source src="Images/Pexels Videos 1234161.mp4" type="video/mp4" alt="Video by KIM ASWANI from Pexels">
+              </video>
+          </div>
+      </div>
+    </div>
+  
+    <div class="container">
+      <div> 
+          <h1>Challenge 5-10 video</h1>
+          <p>a video with a text overlay</p>
+            <div class="vid_overlay">
+              <video width="320" height="240" controls muted autoplay loop>
+                <source src="Images/Pexels Videos 1234161.mp4" type="video/mp4" alt="Video by KIM ASWANI from Pexels">
+              </video>
+              <div class="vid_by">Video by KIM ASWANI</div>
+          </div>
       </div>
     </div>
 
